; ModuleID = '/home/carl/AnghaBench/vlc/modules/gui/extr_ncurses.c_playlist_on_items_added.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/gui/extr_ncurses.c_playlist_on_items_added.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i32**, i64, i8*)* @playlist_on_items_added to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @playlist_on_items_added(i32* %0, i64 %1, i32** %2, i64 %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.TYPE_2__*, align 8
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32** %2, i32*** %8, align 8
  store i64 %3, i64* %9, align 8
  store i8* %4, i8** %10, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = ptrtoint i32* %12 to i64
  %14 = call i32 @VLC_UNUSED(i64 %13)
  %15 = load i64, i64* %7, align 8
  %16 = call i32 @VLC_UNUSED(i64 %15)
  %17 = load i32**, i32*** %8, align 8
  %18 = ptrtoint i32** %17 to i64
  %19 = call i32 @VLC_UNUSED(i64 %18)
  %20 = load i64, i64* %9, align 8
  %21 = call i32 @VLC_UNUSED(i64 %20)
  %22 = load i8*, i8** %10, align 8
  %23 = bitcast i8* %22 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %23, %struct.TYPE_2__** %11, align 8
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  store i32 1, i32* %25, align 4
  ret void
}

declare dso_local i32 @VLC_UNUSED(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
